--- a/MerlionPortal/MerlionPortal-war/web/user/dashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/user/dashboard.xhtml
@@ -10,7 +10,7 @@
         <title>Home Page</title>
     </h:head>
     <h:body>
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="">
             <li><a href="${root}/viewallproducts.xhtml">View Products</a></li>
             <li><a href="${root}/administration.xhtml">View Subscribers</a></li>
         </ul>
