--- a/MerlionPortal/MerlionPortal-war/web/resetpassword.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/resetpassword.xhtml
@@ -16,9 +16,9 @@
             <h:form>
                 <script type="text/javascript">
                     $(document).ready(function() {
-                        $(".btnResetEmail").click(){
+                        $(".btnResetEmail").click(function(){
                             load();
-                        }
+                        });
                     });
                     function success() {
                         $.notify("Password Reset Success!", "success");
