View user and modified some persistence bug- Manli

--- a/MerlionPortal/MerlionPortal-war/web/admin/createuser.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/createuser.xhtml
@@ -61,13 +61,13 @@
                                 <f:selectItem itemLabel="Fail" itemValue="Fail" />
                             </h:selectOneMenu>
 
-                        </h:panelGrid>
-                        <p:outputLabel value="Select Roles:" style="font-weight: bold"/>
-                        <p:selectCheckboxMenu id="roles" value="#{createUserManagerBean.selectedRoles}" label="Roles"
-                                              filter="true" filterMatchMode="startsWith" panelStyle="width:400px" style="width:250px">
-                            <f:selectItems value="#{createUserManagerBean.roles}" var="role" itemLabel="#{role.roleName}" itemValue="#{role.userRoleId}"/>
-                        </p:selectCheckboxMenu>
 
+                            <p:outputLabel value="Select Roles:" style="font-weight: bold" />
+                            <p:selectCheckboxMenu id="roles" value="#{createUserManagerBean.selectedRoles}" label="Roles"
+                                                  filter="true" filterMatchMode="startsWith" panelStyle="width:300px" styleClass="form-control">
+                                <f:selectItems value="#{createUserManagerBean.roles}" var="role" itemLabel="#{role.roleName}" itemValue="#{role.userRoleId}"/>
+                            </p:selectCheckboxMenu>
+                        </h:panelGrid>
 
                         <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
                         <p:commandButton id="ajax" actionListener="#{createUserManagerBean.createSystemUser}" value="Create User" styleClass="btn btn-success" icon="ui-icon-check"/>
