--- a/MerlionPortal/MerlionPortal-war/web/admin/viewroles.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewroles.xhtml
@@ -10,7 +10,7 @@
 
     <c:set var="root" value="${request.contextPath}" />
     <ui:composition template="${root}/templates/templateadmin.xhtml">
-        <ui:param name="pageName" value="Create Role" />
+        <ui:param name="pageName" value="View Roles" />
         <!-- Override Content -->
         <ui:define name="content">
             <c:set var="root" value="${request.contextPath}" />
