--- a/MerlionPortal/MerlionPortal-war/web/mrp/editproduct.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/editproduct.xhtml
@@ -41,7 +41,7 @@
                             <p:outputLabel for="productName" style="font-weight: bold" value="Product Name: " />
                         </p:column>
                         <p:column>
-                            <p:inputText required="true" label="Product Name" requiredMessage="Product Name is required." id="productName" value="#{productManagerBean.productName}">
+                            <p:inputText required="true" label="Product Name" requiredMessage="Product Name is required." id="productName" value="#{productManagedBean.productName}">
                                 <f:validateLength minimum="4" maximum="16" />
                             </p:inputText>
                         </p:column>
@@ -54,7 +54,7 @@
                             <p:outputLabel for="description" style="font-weight: bold" value="Description: " />
                         </p:column>
                         <p:column>
-                            <p:inputText required="true" label="Description" requiredMessage="Description is required." id="description" value="#{productManagerBean.description}">
+                            <p:inputText required="true" label="Description" requiredMessage="Description is required." id="description" value="#{productManagedBean.description}">
                                 <f:validateLength minimum="1" maximum="19" />
                             </p:inputText>
                         </p:column>
@@ -67,7 +67,7 @@
                             <p:outputLabel for="productType" style="font-weight: bold" value="Product Type: " />
                         </p:column>
                         <p:column>
-                            <p:inputText required="true" label="Product Type" requiredMessage="Product Type is required." id="productType" value="#{productManagerBean.productType}">
+                            <p:inputText required="true" label="Product Type" requiredMessage="Product Type is required." id="productType" value="#{productManagedBean.productType}">
                                 <f:validateLength minimum="1" maximum="19"/>
                             </p:inputText>
                         </p:column>
@@ -82,7 +82,7 @@
                             <p:outputLabel for="currency" style="font-weight: bold" value="Currency: " />
                         </p:column>
                         <p:column>
-                            <p:inputText required="true" label="Currency" requiredMessage="Currency is required." id="currency" value="#{productManagerBean.currency}">
+                            <p:inputText required="true" label="Currency" requiredMessage="Currency is required." id="currency" value="#{productManagedBean.currency}">
                                 <f:validateLength minimum="1" maximum="19"/>
                             </p:inputText>
                         </p:column>
@@ -96,7 +96,7 @@
                             <p:outputLabel for="price" style="font-weight: bold" value="Price: " />
                         </p:column>
                         <p:column>
-                            <p:inputText required="true" label="Price" requiredMessage="Price is required." id="price" value="#{productManagerBean.price}">
+                            <p:inputText required="true" label="Price" requiredMessage="Price is required." id="price" value="#{productManagedBean.price}">
                                 <f:validateLength minimum="1" maximum="19"/>
                             </p:inputText>
                         </p:column>
@@ -107,7 +107,7 @@
 
 
                 </p:panelGrid>
-                <p:commandButton id="btn" value="Save New Product" update="panel" actionListener="#{productManagerBean.saveNewProduct}" ajax="true" />
+                <p:commandButton id="btn" value="Save New Product" update="panel" actionListener="#{productManagedBean.saveNewProduct}" ajax="true" />
             </p:panel>
         </h:form>
     </h:body>
