--- a/MerlionPortal/MerlionPortal-war/web/mrp/viewaproduct.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/viewaproduct.xhtml
@@ -41,7 +41,7 @@
                             <p:outputLabel for="productId" style="font-weight: bold" value="Product Id: " />
                         </p:column>
                         <p:column>
-                            <p:inputText required="true" label="Product Id" requiredMessage="Product Id is required." id="productId" value="#{productManagerBean.productId}">
+                            <p:inputText required="true" label="Product Id" requiredMessage="Product Id is required." id="productId" value="#{productManagedBean.productId}">
                                 <f:validateLength minimum="1" maximum="16" />
                             </p:inputText>
                         </p:column>
@@ -50,7 +50,7 @@
                         </p:column>
                     </p:row>
                 </p:panelGrid>
-                <p:commandButton id="btn" value="View The Product" update="panel" actionListener="#{productManagerBean.viewAProduct}" ajax="true" />
+                <p:commandButton id="btn" value="View The Product" update="panel" actionListener="#{productManagedBean.viewAProduct}" ajax="true" />
                 <Br/><Br/><Br/><Br/><Br/>
                 <p:panelGrid>
                     <f:facet name="header">
@@ -63,7 +63,7 @@
                             <h:outputText value="Product ID: " />
                         </p:column>
                         <p:column>
-                            <h:outputText value="#{productManagerBean.productId}" />
+                            <h:outputText value="#{productManagedBean.productId}" />
                         </p:column>
                     </p:row>
 
@@ -72,7 +72,7 @@
                             <h:outputText value="Product Name: " />
                         </p:column>
                         <p:column>
-                            <h:outputText value="#{productManagerBean.productName}" />
+                            <h:outputText value="#{productManagedBean.productName}" />
                         </p:column>
                     </p:row>
 
@@ -81,7 +81,7 @@
                             <h:outputText value="Description: " />
                         </p:column>
                         <p:column>
-                            <h:outputText value="#{productManagerBean.description}" />
+                            <h:outputText value="#{productManagedBean.description}" />
                         </p:column>
                     </p:row>
 
@@ -90,7 +90,7 @@
                             <h:outputText value="Product Type: " />
                         </p:column>
                         <p:column>
-                            <h:outputText value="#{productManagerBean.productType}" />
+                            <h:outputText value="#{productManagedBean.productType}" />
                         </p:column>
                     </p:row>
 
@@ -99,7 +99,7 @@
                             <h:outputText value="Currency: " />
                         </p:column>
                         <p:column>
-                            <h:outputText value="#{productManagerBean.currency}" />
+                            <h:outputText value="#{productManagedBean.currency}" />
                         </p:column>
                     </p:row>
 
@@ -108,7 +108,7 @@
                             <h:outputText value="Price: " />
                         </p:column>
                         <p:column>
-                            <h:outputText value="#{productManagerBean.price}" />
+                            <h:outputText value="#{productManagedBean.price}" />
                         </p:column>
                     </p:row>
                 </p:panelGrid>   
