--- a/MerlionPortal/MerlionPortal-war/web/mrp/viewaproduct.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/viewaproduct.xhtml
@@ -84,7 +84,14 @@
                             <h:outputText value="#{productManagedBean.description}" />
                         </p:column>
                     </p:row>
-
+<p:row>
+                        <p:column headerText="Product Category" >
+                            <h:outputText value="Product Category: " />
+                        </p:column>
+                        <p:column>
+                            <h:outputText value="#{productManagedBean.category}" />
+                        </p:column>
+                    </p:row>
                     <p:row>
                         <p:column headerText="Product Type" >
                             <h:outputText value="Product Type: " />
